started developing of registering new stuff buttons. added new form

--- a/diplomaProj/diplomaProj.csproj
+++ b/diplomaProj/diplomaProj.csproj
@@ -64,10 +64,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GetCodes2IncomeOutcome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GetCodes2IncomeOutcome.Designer.cs">
+      <DependentUpon>GetCodes2IncomeOutcome.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GetCodes2IncomeOutcome.resx">
+      <DependentUpon>GetCodes2IncomeOutcome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
